# backup-integrity-verifier

./: .gitignore  README.md  pyproject.toml
backup_verifier/: __init__.py  cli.py  manifest.py  report.py  storage.py  verifier.py
examples/: example_manifest.json
tests/: test_verifier.py
