[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-integrity-verifier"
version = "0.1.0"
description = "Validate backup archives against a manifest, track verification history, and emit audit-ready JSON/HTML reports."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Aslam Ahamed", email = "aslamahamed47@gmail.com" }
]
keywords = ["backup", "bcdr", "disaster-recovery", "integrity", "sha256", "archive", "compliance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Recovery Tools",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
backup-verifier = "backup_verifier.cli:main"

[project.urls]
Homepage = "https://github.com/intruderfr/backup-integrity-verifier"
Issues = "https://github.com/intruderfr/backup-integrity-verifier/issues"

[tool.setuptools.packages.find]
include = ["backup_verifier*"]
exclude = ["tests*"]
